--- a/3Drive F103/MDK-ARM/3Drive F103/3Drive F103.build_log.htm
+++ b/3Drive F103/MDK-ARM/3Drive F103/3Drive F103.build_log.htm
@@ -21,7 +21,7 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.7.0
 Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
-C:\Users\ZaTee\Desktop\STM32\3Drive F103\MDK-ARM\3Drive F103.uvprojx
+C:\Users\ZaTee\Desktop\STM32\beckUP\jobot 19.04.2020\3Drive F103\MDK-ARM\3Drive F103.uvprojx
 Project File Date:  04/11/2020
 
 <h2>Output:</h2>
@@ -59,7 +59,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
